# smarti-cv

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
include/smarti/: detector.hpp  frame_loader.hpp  label.hpp  types.hpp  viewer.hpp
scripts/: docker-run.sh  fetch-model.sh  prepare_onnx.py  run.sh
src/: detector.cpp  frame_loader.cpp  label.cpp  main.cpp  viewer.cpp
